fix: removed margin top on mobile

--- a/src/components/Banner/fixed-dbot-banner.scss
+++ b/src/components/Banner/fixed-dbot-banner.scss
@@ -6,10 +6,6 @@
         display: flex;
         justify-content: center;
         background-color: #ffeabf;
-
-        @include mobile {
-            margin-top: 2.4rem;
-        }
     }
 
     &__content {
